save point. test in progress

--- a/tests/ansible.cfg
+++ b/tests/ansible.cfg
@@ -1,8 +1,8 @@
 [defaults]
-hostfile = ./tests/ci-inventory
-private_key_file = ./insecure-CI
+hostfile = ./hosts
+private_key_file = ~/insecure-CI
+host_key_checking = False
 
 [ssh_connection]
 control_path = ./ansible-ssh-%%h-%%p-%%r
 ssh_args =
-
