relative key in cfg

--- a/tests/ansible.cfg
+++ b/tests/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
 hostfile = ./hosts
-private_key_file = ~/insecure-CI
+private_key_file = ../../insecure-CI
 host_key_checking = False
 
 [ssh_connection]
