--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "ansible-role-stig"]
-	path = ansible-role-stig
-	url = git@github.com:nousdefions/ansible-role-stig.git
+[submodule "RHEL6-STIG"]
+	path = RHEL6-STIG
+	url = git@github.com:defionscode/RHEL6-STIG.git 
