--- a/tests/ansible.cfg
+++ b/tests/ansible.cfg
@@ -2,6 +2,7 @@
 hostfile = ./hosts
 private_key_file = ../../insecure-CI
 host_key_checking = False
+display_skipped_hosts = False
 
 [ssh_connection]
 control_path = ./ansible-ssh-%%h-%%p-%%r
