--- a/tests/requirements.yml
+++ b/tests/requirements.yml
@@ -1,3 +1,3 @@
-- src: https://github.com/defionscode/RHEL6-STIG.git
+- src: https://github.com/ansible/RHEL6-STIG.git
   name: rhel6-stig
   path: roles/
