--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "RHEL6-STIG"]
 	path = RHEL6-STIG
-	url = git@github.com:ansible/RHEL6-STIG.git 
+	url = git@github.com:MindPointGroup/RHEL6-STIG.git 
