--- a/tests/codeship-ansible.cfg
+++ b/tests/codeship-ansible.cfg
@@ -1,8 +1,7 @@
 [defaults]
-hostfile = ./hosts
-private_key_file = ../../insecure-CI
 host_key_checking = False
 display_skipped_hosts = False
+private_key_file = ./insecure-CI-key
 
 [ssh_connection]
 control_path = ./ansible-ssh-%%h-%%p-%%r
