--- a/tests/codeship-ansible.cfg
+++ b/tests/codeship-ansible.cfg
@@ -2,7 +2,5 @@
 host_key_checking = False
 display_skipped_hosts = False
 private_key_file = ./insecure-CI-key
+transport = paramiko
 
-[ssh_connection]
-control_path = ./ansible-ssh-%%h-%%p-%%r
-ssh_args =
