--- a/tests/roles/stop_env/tasks/main.yml
+++ b/tests/roles/stop_env/tasks/main.yml
@@ -2,5 +2,5 @@
   ec2:
     state: absent
     region: us-east-1
-    instance_ids: '{{ item.instance_ids }}'
-  with_items: stig_instances.results
+    instance_ids: "{{ item.instance_ids }}"
+  with_items: "{{ stig_instances.results }}"
