Change EPEL URL to use latest and version based on a fact

--- a/tests/roles/post-test/defaults/main.yml
+++ b/tests/roles/post-test/defaults/main.yml
@@ -1,5 +1,4 @@
----
-epel: "http://dl.fedoraproject.org/pub/epel/6/x86_64/epel-release-6-8.noarch.rpm"
+epel: "http://dl.fedoraproject.org/pub/epel/epel-release-latest-{{ ansible_distribution_major_version }}.noarch.rpm"
 profile: "MAC-1_Public"
 cpe: "U_RedHat_6_V1R6_STIG_SCAP_1-1_Benchmark-cpe-dictionary.xml"
 scap_url: "http://iasecontent.disa.mil/stigs/zip/July2015/U_RedHat_6_V1R8_STIG_SCAP_1-1_Benchmark.zip"
