--- a/tests/roles/post-test/tasks/main.yml
+++ b/tests/roles/post-test/tasks/main.yml
@@ -3,32 +3,39 @@
     name: "{{ epel }}"
     state: present
 
- - name: Install Python Libraries
-   pip:
-    name: "{{ item }}"
-    state: present
-   with_items:
-     - untangle
-     - tabulate
+- name: Install OpenSCAP and Pip
+  yum:
+  name:
+    - openscap-utils
+    - python-pip
+  state: present
 
- - name: Download RHEL6 STIG files for OSCAP
-   get_url:
+- name: Install Python Libraries
+  pip:
+  name: "{{ item }}"
+  state: present
+  with_items:
+    - untangle
+    - tabulate
+
+- name: Download RHEL6 STIG files for OSCAP
+  get_url:
     url: "{{ scap_url }}"
     dest: /tmp/
 
- - name: Unzip OSCAP files
-   command: unzip -o {{ scap_url | basename }}
-   args:
-     chdir: /tmp/
+- name: Unzip OSCAP files
+  command: unzip -o {{ scap_url | basename }}
+  args:
+    chdir: /tmp/
 
- - name: Run OpenScap Checks and save to results.xml
-   shell: oscap xccdf eval --profile {{ profile }} --results results.xml --cpe {{ scap_prefix }}-cpe-dictionary.xml {{ scap_prefix }}-xccdf.xml > /dev/null 2>&1
-   args:
-     chdir: /tmp/
-   register: results
-   ignore_errors: yes
+- name: Run OpenScap Checks and save to results.xml
+  shell: oscap xccdf eval --profile {{ profile }} --results results.xml --cpe {{ scap_prefix }}-cpe-dictionary.xml {{ scap_prefix }}-xccdf.xml > /dev/null 2>&1
+  args:
+    chdir: /tmp/
+  register: results
+  ignore_errors: yes
 
- - name: Run STIGMA against results.xml
-   script: stigma.py -P /tmp/results.xml -H {{ high_pct }} -M {{ med_pct }} -L {{ low_pct }} -T {{ tot_pct }}
-   args:
-     chdir: /tmp/
+- name: Run STIGMA against results.xml
+  script: stigma.py -P /tmp/results.xml -H {{ high_pct }} -M {{ med_pct }} -L {{ low_pct }} -T {{ tot_pct }}
+  args:
+    chdir: /tmp/
