--- a/tests/roles/post-test/defaults/main.yml
+++ b/tests/roles/post-test/defaults/main.yml
@@ -1,9 +1,9 @@
 epel: "http://dl.fedoraproject.org/pub/epel/epel-release-latest-{{ ansible_distribution_major_version }}.noarch.rpm"
 profile: "MAC-1_Public"
 cpe: "U_RedHat_6_V1R6_STIG_SCAP_1-1_Benchmark-cpe-dictionary.xml"
-scap_url: "http://iasecontent.disa.mil/stigs/zip/July2015/U_RedHat_6_V1R8_STIG_SCAP_1-1_Benchmark.zip"
-scap_prefix: "U_RedHat_6_V1R8_STIG_SCAP_1-1_Benchmark"
-high_pct: 100
+scap_url: "http://iasecontent.disa.mil/stigs/zip/Oct2016/U_RedHat_6_V1R13_STIG_SCAP_1-1_Benchmark.zip"
+scap_prefix: "{{ ( scap_url | basename | splitext )[0] }}"
+high_pct: 90
 med_pct: 90
 low_pct: 85
 tot_pct: 85
