Adjust CI Test settings
Change SSH key, lower pass threshold for CAT II.

--- a/tests/roles/start_env/tasks/main.yml
+++ b/tests/roles/start_env/tasks/main.yml
@@ -9,7 +9,7 @@
       image: "{{ item }}"
       group_id: "sg-6f885c0b"
       count: 1
-      key_name: insecure-jdavila
+      key_name: citest
       volumes:
           - device_name: /dev/xvda
             device_type: gp2
