Add markupsafe to CI requirements.txt

--- a/tests/ansible.cfg
+++ b/tests/ansible.cfg
@@ -1,8 +1,9 @@
 [defaults]
 hostfile = ./hosts
-private_key_file = ../../insecure-CI
+private_key_file = ../../citest
 host_key_checking = False
 display_skipped_hosts = False
+retry_files_enabled = False
 
 [ssh_connection]
 control_path = ./ansible-ssh-%%h-%%p-%%r
