Add meltdown packages for Debian

--- a/meltdown-spectre-linux.yml
+++ b/meltdown-spectre-linux.yml
@@ -1,3 +1,5 @@
+# https://meltdownattack.com
+
 - name: Patch Linux systems against Meltdown and Spectre
   hosts: "{{ target_hosts | default('all') }}"
   become: yes
@@ -5,6 +7,7 @@
   vars:
     reboot_after_update: no
     packages:
+      # https://access.redhat.com/security/vulnerabilities/speculativeexecution
       RedHat7:
         - kernel-3.10.0-693.11.6.el7
         - microcode_ctl-2.1-22.2.el7
@@ -15,9 +18,14 @@
         - kernel-firmware-2.6.32-696.18.7.el6
         - perf-2.6.32-696.18.7.el6
         - python-perf-2.6.32-696.18.7.el6
+
+      # https://www.debian.org/security/2018/dsa-4078
       Debian7: []
       Debian8: []
-      Debian9: []
+      Debian9:
+        - linux-image-4.9.0-5-amd64
+
+      # https://wiki.ubuntu.com/SecurityTeam/KnowledgeBase/SpectreAndMeltdown
       Ubuntu14: []
       Ubuntu16: []
 
@@ -31,9 +39,11 @@
 
     - name: DEBIAN | Install kernel updates
       apt:
-        name: "{{ packages[ansible_distribution ~ ansible_distribution_major_version] }}"
-        value: prenest
+        name: "{{ item }}"
+        state: present
         update_cache: yes
+        cache_valid_time: 3600
+      with_items: "{{ packages[ansible_distribution ~ ansible_distribution_major_version] }}"
       when: ansible_pkg_mgr == 'apt'
       notify: reboot system
 
